--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 intervaltree==3.1.0
 numpy==1.22.2
+pandas==1.4.1
+python-dateutil==2.8.2
+pytz==2021.3
 pyvarco==1.0.0
+six==1.16.0
 sortedcontainers==2.4.0
