--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,10 @@
 [submodule "avida/libs/apto"]
-	path = avida/libs/apto
-	url = https://github.com/dmbryson/apto.git
+  path = avida/libs/apto
+  url = https://github.com/dmbryson/apto.git
 [submodule "avida/documentation"]
-	path = avida/documentation
-	url = https://github.com/devosoft/avida.wiki.git
+  path = avida/documentation
+  url = https://github.com/devosoft/avida.wiki.git
+[submodule "third-party/Empirical"]
+	path = third-party/Empirical
+	url = https://github.com/amlalejini/Empirical.git
+	branch = 2020-avida-plasticity
