--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+cycler==0.11.0
+ete3==3.1.2
+fonttools==4.30.0
 intervaltree==3.1.0
+kiwisolver==1.3.2
+matplotlib==3.5.1
 numpy==1.22.2
+packaging==21.3
 pandas==1.4.1
+Pillow==9.0.1
+pyparsing==3.0.7
 python-dateutil==2.8.2
 pytz==2021.3
 pyvarco==1.0.0
