fix 2022-03-07 avida analyze file

--- a/experiments/2022-03-07-variable-mut/hpc/config/analyze.cfg
+++ b/experiments/2022-03-07-variable-mut/hpc/config/analyze.cfg
@@ -9,27 +9,38 @@
 SET i 300000
 SET v unknown
 
+
 FUNCTION SET_ENV_A
   SET v env_a
   SetReactionValue NOT 1.0
-  SetReactionValue NAND -0.1
+  SetReactionValue NAND 0.8
   SetReactionValue AND 1.0
-  SetReactionValue ORN -0.1
+  SetReactionValue ORN 0.8
   SetReactionValue OR 1.0
-  SetReactionValue ANDN -0.1
+  SetReactionValue ANDN 0.8
 END
 
 FUNCTION SET_ENV_B
   SET v env_b
-  SetReactionValue NOT -0.1
+  SetReactionValue NOT 0.8
   SetReactionValue NAND 1.0
-  SetReactionValue AND -0.1
+  SetReactionValue AND 0.8
   SetReactionValue ORN 1.0
-  SetReactionValue OR -0.1
+  SetReactionValue OR 0.8
   SetReactionValue ANDN 1.0
 END
 
-SET_ENV_B
+FUNCTION SET_ENV_ALL
+  SET v env_all
+  SetReactionValue NOT 1.0
+  SetReactionValue NAND 1.0
+  SetReactionValue AND 1.0
+  SetReactionValue ORN 1.0
+  SetReactionValue OR 1.0
+  SetReactionValue ANDN 1.0
+END
+
+SET_ENV_ALL
 
 # Clear batches
 PURGE_BATCH 0  # Use this for final dominant
