--- a/experiments/2022-04-18-chg-rates/hpc/config/avida.cfg
+++ b/experiments/2022-04-18-chg-rates/hpc/config/avida.cfg
@@ -726,8 +726,8 @@ RES_FOR_DEME_REP 0          # The amount of resources that must be consumed prio
 
 ### REACTION_SENSING_GROUP ###
 # Reaction Sensing Settings
-DISABLE_REACTION_SENSORS 0    # Set to disable reaction-sensing instructions (they will act as NOP instructions).
-REACTION_SENSORS_NEUTRAL 0.0  # What is the neutral, '0', value for reaction sensors? Reaction values higher than neutral result in '1', lower result in '-1', neutral value results in '0'.
+# DISABLE_REACTION_SENSORS 0    # Set to disable reaction-sensing instructions (they will act as NOP instructions).
+# REACTION_SENSORS_NEUTRAL 0.0  # What is the neutral, '0', value for reaction sensors? Reaction values higher than neutral result in '1', lower result in '-1', neutral value results in '0'.
 
 ### DEPRECATED_GROUP ###
 # DEPRECATED (New functionality listed in comments)
